# inSPy-Logger

./: .gitignore  .gitpod.Dockerfile  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  LICENSE.md  README.md  Untitled.ipynb  conf.py  dir.txt  index.rst  modules.rst  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  dev_task_bug.md
.github/workflows/: python-package.yml
_build/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/.doctrees/: environment.pickle  index.doctree
_build/_sources/: index.rst.txt
_build/doctrees/: environment.pickle  index.doctree  inspy_logger.doctree  modules.doctree
_build/html/: .buildinfo  genindex.html  index.html  inspy_logger.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_sources/: index.rst.txt  inspy_logger.rst.txt
_build/html/_static/: documentation_options.js
dev_notes/: CHANGES.md  TODO.md  old_CHANGELOG.md  v3_1_0-RELEASE.md
dev_notes/2_1_a13to2_1a14/: CHANGES.md
docs/: conf.py  index.md  index.rst
docs/_autosummary/: inspy_logger.common.DEFAULT_LOGGING_LEVEL.rst  inspy_logger.common.InspyLogger.rst  inspy_logger.common.LEVELS.rst  inspy_logger.common.LEVEL_MAP.rst  inspy_logger.common.dirs.rst  inspy_logger.common.meta.AUTHORS.rst  inspy_logger.common.meta.RELEASE_MAP.rst  inspy_logger.common.meta.URLS.rst  inspy_logger.common.meta.VERSION.rst  inspy_logger.common.meta.rst  inspy_logger.common.rst  inspy_logger.engine.Logger.rst  inspy_logger.engine.handlers.BufferingHandler.rst  inspy_logger.engine.handlers.rst  inspy_logger.engine.rst  inspy_logger.errors.DeviceAlreadyStartedError.rst  inspy_logger.errors.DeviceNotStartedError.rst  inspy_logger.errors.InSPyLoggerError.rst  inspy_logger.errors.InvalidLoggerLevelError.rst  inspy_logger.errors.ManifestEntryExistsError.rst  inspy_logger.errors.rst  inspy_logger.helpers.CustomFormatter.rst  inspy_logger.helpers.ValidVars.rst  inspy_logger.helpers.base_classes.Loggable.rst  inspy_logger.helpers.base_classes.LoggableDescriptor.rst  inspy_logger.helpers.base_classes.rst  inspy_logger.helpers.check_preemptive_level_set.rst  inspy_logger.helpers.clean_module_name.rst  inspy_logger.helpers.command_line.add_argument.rst  inspy_logger.helpers.command_line.rst  inspy_logger.helpers.debug.environment.determine_execution_mode.rst  inspy_logger.helpers.debug.environment.fetch_system_info.rst  inspy_logger.helpers.debug.environment.get_operating_system_info.rst  inspy_logger.helpers.debug.environment.get_system_info.rst  inspy_logger.helpers.debug.environment.is_valid_data_format.rst  inspy_logger.helpers.debug.environment.rst  inspy_logger.helpers.debug.rst  inspy_logger.helpers.debug.system.processor.get_processor_core_info.rst  inspy_logger.helpers.debug.system.processor.is_64bit.rst  inspy_logger.helpers.debug.system.processor.number_of_cores.rst  (+43 more)
examples/v2.0/: example_1.py  example_2.py
examples/v2.0/imported_libs/: start_child.py
examples/v3.0/: loggable_class.py  pre_config.py  silent_import.py  warn_once_example.py
inspy_logger/: __about__.py  __init__.py  constants.py  types.py  version.py
inspy_logger/Scripts/: main.py
inspy_logger/common/: __init__.py  meta.py
inspy_logger/common/meta/: __init__.py  local_package.py
inspy_logger/common/meta/constants/: __init__.py  urls.py
inspy_logger/common/meta/helpers/: __init__.py  data_classes.py
inspy_logger/common/meta/helpers/api/: __init__.py  cache.py
inspy_logger/config/: __init__.py
inspy_logger/engine/: __init__.py  handlers.py
inspy_logger/engine/adapters/: __init__.py  thread.py
inspy_logger/helpers/: __init__.py  base_classes.py  cache.py  decorators.py  descriptors.py  filters.py  logging.py  network.py  units.py
inspy_logger/helpers/debug/: environment.py
inspy_logger/helpers/debug/system/: session.py
inspy_logger/helpers/debug/temp_log_facility/: __init__.py
inspy_logger/manifest/: __init__.py
inspy_logger/models/announcement/: __init__.py
inspy_logger/system/: __init__.py
inspy_logger/tool/config/arguments/: __init__.py
inspy_logger/types/: __init__.py
inspy_logger/version/: __init__.py
legacy_docs/: CHANGELOG.md
