[tool.poetry]
name = "inspy-logger"
version = "3.1.0-dev.4"
description = "Colorable, scalable logger for CLI"
authors = ["Taylor-Jayde Blackstone <tayjaybabee@gmail.com>"]
homepage = 'https://github.com/Inspyre-Softworks/inSPy-Logger'
repository = 'https://github.com/Inspyre-Softworks/inSPy-Logger'
documentation = 'https://inspy-logger.readthedocs.io/en/latest/'
readme = 'README.md'
license = 'MIT'
keywords = ['cli', 'color', 'logging', 'log', 'terminal', 'console', 'colorama', 'colorlog', 'rich']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System :: Logging',
    'Topic :: Utilities',
    ]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
colorlog = "^6.8.2"
setuptools-autover = "^1.0.2"
luddite = "^1.0.4"
packaging = "^24.0"
appdirs = "^1.4.4"
colorama = "^0.4.6"
requests = "^2.28.1"
humanize = "^4.4.0"
python-box = "^7.1.1"
rich = "^13.7.0"
pypattyrn = "^1.2"
platformdirs = "^4.2.0"
pyperclip = "^1.8.2"
cachetools = "^5.3.3"

[tool.poetry.dev-dependencies]
ptipython = "^1.0.1"
asciinema = "^2.2.0"
bpython = "^0.24"

[tool.poetry.scripts]
inspy-logger-tool = "inspy_logger.Scripts.main:main"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-autodoc-typehints = "^1.25.2"
sphinxcontrib-napoleon = "^0.7"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-argdoc = "^0.1.3"
autoclasstoc = "^1.6.0"
sphinx-autodoc-annotation = "^1.0.post1"
sphinxcontrib-autoprogram = "^0.1.8"


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.6.0"
sphinx-autodoc2 = {extras = ["cli"], version = "^0.5.0"}
mkdocs-material = "^9.5.15"
sphinx = "^7.2.6"
sphinx-autobuild = "^2024.2.4"


[tool.poetry.group.debug.dependencies]


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "poetry-plugin-export<2.0.0,>=1.6.0",
    "sphinx-autodoc2[cli]<1.0.0,>=0.5.0",
    "mkdocs-material<10.0.0,>=9.5.15",
    "sphinx<8.0.0,>=7.2.6",
    "sphinx-autobuild<2025.0.0,>=2024.2.4",
]
docs = [
    "sphinx<8.0.0,>=7.2.6",
    "sphinx-autodoc-typehints<2.0.0,>=1.25.2",
    "sphinxcontrib-napoleon<1.0,>=0.7",
    "sphinx-rtd-theme<3.0.0,>=2.0.0",
    "sphinxcontrib-argdoc<1.0.0,>=0.1.3",
    "autoclasstoc<2.0.0,>=1.6.0",
    "sphinx-autodoc-annotation<2.0.0,>=1.0.post1",
    "sphinxcontrib-autoprogram<1.0.0,>=0.1.8",
]
debug = []

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Taylor-Jayde Blackstone", email = "tayjaybabee@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.9"
dependencies = [
    "colorlog<7.0.0,>=6.8.2",
    "setuptools-autover<2.0.0,>=1.0.2",
    "luddite<2.0.0,>=1.0.4",
    "packaging<25.0,>=24.0",
    "appdirs<2.0.0,>=1.4.4",
    "colorama<1.0.0,>=0.4.6",
    "requests<3.0.0,>=2.28.1",
    "humanize<5.0.0,>=4.4.0",
    "python-box<8.0.0,>=7.1.1",
    "rich<14.0.0,>=13.7.0",
    "pypattyrn<2.0,>=1.2",
    "platformdirs<5.0.0,>=4.2.0",
    "pyperclip<2.0.0,>=1.8.2",
    "cachetools<6.0.0,>=5.3.3",
]
name = "inspy-logger"
version = "3.1.0-dev.4"
description = "Colorable, scalable logger for CLI"
readme = "README.md"
keywords = [
    "cli",
    "color",
    "logging",
    "log",
    "terminal",
    "console",
    "colorama",
    "colorlog",
    "rich",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://github.com/Inspyre-Softworks/inSPy-Logger"
repository = "https://github.com/Inspyre-Softworks/inSPy-Logger"
documentation = "https://inspy-logger.readthedocs.io/en/latest/"

[project.scripts]
inspy-logger-tool = "inspy_logger.Scripts.main:main"
